# telegram-bot-business-card

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: __main__.py  config.py  filters.py
bot/db/: engine.py  models.py  repositories.py
bot/handlers/: __init__.py  admin.py  admin_catalog.py  booking.py  catalog.py  start.py
bot/keyboards/: admin.py  catalog.py  main_menu.py
bot/middlewares/: db.py
bot/services/: booking.py  business.py  catalog.py
data/: business.json  seed.json
docs/: architecture.md
migrations/: env.py
migrations/versions/: bba2cedcec7e_initial_schema.py  f5f6b7f07422_add_booking_status.py
specs/: backlog.md
tests/: test_booking.py
