[project]
name = "telegram-bot-business-card"
version = "0.1.0"
description = "Telegram bot for business: catalog, booking, admin panel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0,<3",
    "alembic>=1.14,<2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"
line-length = 110
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
